Updated the project to Cassandra 1.0.1 and Hector 1.0.1. The following days i will rerun the benchmarks to check if the results will be different from the results of Cassandra 0.7 (also changed a few configurations that might help)